<resources>
    <string name="app_name">HealthyHome Alpha</string>
    <string name="bottem_nav_home">Home</string>
    <string name="bottem_nav_settings">Settings</string>
    <string name="bottem_nav_logout">Logout</string>
    <string name="bottem_nav_back">Back</string>
    <string name="top_left_button">My Tasks</string>
    <string name="top_right_button">All Tasks</string>
    <string name="bottom_left_button">Add Task</string>
    <string name="bottom_right_button">Members</string>

    <string name="user_task_assignment">Task Assignment</string>

    <string name="user_joined_home_channel_id">20323</string>
    <string name="user_joined_home_channel_name">User joined your home</string>
    <string name="user_joined_home_channel_description">A user has joined your home</string>

    <string name="general_channel_id">20323</string>
    <string name="general_channel_name">General</string>
    <string name="general_channel_description">A general all purpose notification channel</string>

    <string name="FCM_API">https://fcm.googleapis.com/fcm/send</string>
    <string name="server_key">AAAALOsY6eI:APA91bG8CljSIJHIWT8puOLsOk4fXCAjuZUHXRnN2EruJCTKpMxzsVshBX5bxyJxxuO-taj8HJJOPr7srVUwmbnZmEvo_aK8-C-q5h0zuQ_pY4-ZXo8dcXWrS48m_YnoPAfIPzdOFmpR</string>
    <string name="content_type">application/json</string>


    <integer name="layout_margin_top">20</integer>

    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id">slFm5sIuxPAXYObV4otfOLdB2UO4Td16sksfdbd7</string>
    <string name="back4app_client_key">EmuP6dIn1Y6B6BU46kJyPe4MjVcSrCiooxuZx3Ag</string>

    <string name="title_activity_my_tasks">MyTasks</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


</resources>