<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/GhostWhite"
    tools:context=".HomeScreen">

    <Button
        android:id="@+id/topLeftButton"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/rounded_button"
        android:text="@string/top_left_button"
        android:onClick="myTasks"
        app:layout_constraintBottom_toTopOf="@+id/anchorButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/topRightButton"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/rounded_button"
        android:text="@string/top_right_button"
        android:onClick="allTasks"
        app:layout_constraintBottom_toTopOf="@+id/anchorButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bottomLeftButton"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/rounded_button"
        android:text="@string/bottom_left_button"
        android:onClick="addTask"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/anchorButton" />

    <Button
        android:id="@+id/bottomRightButton"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/rounded_button"
        android:onClick="showMembers"
        android:text="@string/bottom_right_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/anchorButton" />

    <Button
        android:id="@+id/anchorButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:text="Anchor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/quoteView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="A random quote will go here -Jay Madison"
        android:textColor="@color/Pink"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        ...

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/GhostWhite"
            app:menu="@menu/bottom_navigation_menu" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>